[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/slowdownSimple.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/main.gd" type="Script" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Scene" type="Node2D" parent="."]

[node name="SlowdownSimple" parent="Scene" instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 2 )]

[connection signal="next_pressed" from="CanvasLayer/HUD" to="." method="_on_HUD_next_pressed"]
[connection signal="slow_pressed" from="CanvasLayer/HUD" to="." method="_on_HUD_slow_pressed"]
